src/cminus.output
Terminals unused in grammar

   ERROR


Rules useless in parser due to conflicts

   85 statement-list: statement-list error


State 16 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce, 2 reduce/reduce
State 72 conflicts: 2 reduce/reduce
State 80 conflicts: 6 reduce/reduce
State 87 conflicts: 1 shift/reduce
State 125 conflicts: 14 shift/reduce
State 127 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 141 conflicts: 3 reduce/reduce
State 160 conflicts: 1 shift/reduce
State 164 conflicts: 11 shift/reduce
State 166 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 176 conflicts: 15 shift/reduce
State 180 conflicts: 21 shift/reduce
State 183 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 193 conflicts: 6 reduce/reduce
State 195 conflicts: 1 shift/reduce
State 210 conflicts: 1 shift/reduce
State 213 conflicts: 1 shift/reduce
State 225 conflicts: 3 shift/reduce, 19 reduce/reduce
State 231 conflicts: 1 shift/reduce
State 238 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration-list

    2 declaration-list: declaration-list declaration
    3                 | declaration

    4 declaration: var-declaration
    5            | fun-declaration
    6            | error

    7 var-declaration: type-specifier var-decl-list SEMICOLON
    8                | error SEMICOLON

    9 scoped-var-declaration: scoped-type-specifier var-decl-list SEMICOLON
   10                       | type-specifier error
   11                       | error SEMICOLON

   12 var-decl-list: var-decl-list COMMA var-decl-initialize
   13              | var-decl-initialize
   14              | error COMMA var-decl-initialize
   15              | var-decl-list COMMA error

   16 var-decl-initialize: var-decl-id
   17                    | var-decl-id COLON simple-expression
   18                    | error COLON simple-expression
   19                    | var-decl-id COLON error
   20                    | error

   21 var-decl-id: ID
   22            | ID LBRACKET NUMCONST RBRACKET
   23            | ID LBRACKET error
   24            | error RBRACKET

   25 scoped-type-specifier: STATIC type-specifier
   26                      | type-specifier

   27 type-specifier: INT
   28               | BOOL
   29               | CHAR

   30 fun-declaration: type-specifier ID LPAREN params RPAREN statement
   31                | ID LPAREN params RPAREN statement
   32                | type-specifier error
   33                | type-specifier ID LPAREN error
   34                | type-specifier ID LPAREN params RPAREN error
   35                | ID LPAREN error
   36                | ID LPAREN params RPAREN error

   37 params: param-list
   38       | %empty

   39 param-list: param-list SEMICOLON param-type-list
   40           | param-type-list
   41           | error SEMICOLON param-type-list
   42           | param-list SEMICOLON error

   43 param-type-list: type-specifier param-id-list
   44                | type-specifier error

   45 param-id-list: param-id-list COMMA param-id
   46              | param-id
   47              | error COMMA param-id
   48              | param-id-list COMMA error

   49 param-id: ID
   50         | ID LBRACKET RBRACKET
   51         | error

   52 statement: matched
   53          | unmatched

   54 matched: expression-stmt
   55        | compound-stmt
   56        | matched-selection-stmt
   57        | matched-while-stmt
   58        | matched-foreach-stmt
   59        | return-stmt
   60        | break-stmt
   61        | error

   62 unmatched: unmatched-selection-stmt
   63          | unmatched-while-stmt
   64          | unmatched-foreach-stmt

   65 matched-selection-stmt: IF LPAREN simple-expression RPAREN matched ELSE matched
   66                       | IF LPAREN error RPAREN matched ELSE matched

   67 unmatched-selection-stmt: IF LPAREN simple-expression RPAREN statement
   68                         | IF LPAREN simple-expression RPAREN matched ELSE unmatched
   69                         | IF LPAREN error RPAREN statement
   70                         | IF LPAREN error RPAREN matched ELSE unmatched

   71 matched-while-stmt: WHILE LPAREN simple-expression RPAREN matched
   72                   | WHILE LPAREN error RPAREN matched

   73 unmatched-while-stmt: WHILE LPAREN simple-expression RPAREN unmatched
   74                     | WHILE LPAREN error RPAREN unmatched

   75 matched-foreach-stmt: FOREACH LPAREN mutable IN simple-expression RPAREN matched
   76                     | FOREACH LPAREN error RPAREN matched

   77 unmatched-foreach-stmt: FOREACH LPAREN mutable IN simple-expression RPAREN unmatched
   78                       | FOREACH LPAREN error RPAREN unmatched

   79 compound-stmt: LBRACE local-declarations statement-list RBRACE
   80              | LBRACE error statement-list RBRACE
   81              | LBRACE local-declarations error RBRACE

   82 local-declarations: local-declarations scoped-var-declaration
   83                   | %empty

   84 statement-list: statement-list statement
   85               | statement-list error
   86               | %empty

   87 expression-stmt: expression SEMICOLON
   88                | error SEMICOLON
   89                | SEMICOLON

   90 return-stmt: RETURN SEMICOLON
   91            | RETURN expression SEMICOLON

   92 break-stmt: BREAK SEMICOLON

   93 expression: mutable ASSIGN expression
   94           | mutable assignop expression
   95           | error assignop expression
   96           | mutable assignop error
   97           | error assignop error
   98           | mutable INC
   99           | mutable DEC
  100           | simple-expression
  101           | error INC
  102           | error DEC

  103 assignop: ASSIGN
  104         | ADDASS
  105         | SUBASS
  106         | MULASS
  107         | DIVASS

  108 simple-expression: simple-expression OR and-expression
  109                  | and-expression
  110                  | error OR and-expression
  111                  | simple-expression OR error
  112                  | error OR error

  113 and-expression: and-expression AND unary-rel-expression
  114               | unary-rel-expression
  115               | error AND unary-rel-expression
  116               | and-expression AND error
  117               | error AND error

  118 unary-rel-expression: NOT unary-rel-expression
  119                     | rel-expression
  120                     | NOT error

  121 rel-expression: sum-expression relop sum-expression
  122               | sum-expression
  123               | error relop sum-expression
  124               | sum-expression relop error
  125               | error relop error

  126 relop: LESSEQ
  127      | LTHAN
  128      | GTHAN
  129      | GRTEQ
  130      | EQ
  131      | NOTEQ

  132 sum-expression: sum-expression sumop term
  133               | term
  134               | error sumop term
  135               | sum-expression sumop error
  136               | error sumop error

  137 sumop: PLUS
  138      | MINUS

  139 term: term mulop unary-expression
  140     | unary-expression
  141     | error mulop unary-expression
  142     | term mulop error
  143     | error mulop error

  144 mulop: MULTIPLY
  145      | DIVIDE
  146      | MODULUS

  147 unary-expression: unaryop unary-expression
  148                 | factor
  149                 | unaryop error

  150 unaryop: MINUS
  151        | MULTIPLY
  152        | QUESTION

  153 factor: immutable
  154       | mutable

  155 mutable: ID
  156        | ID LBRACKET expression RBRACKET
  157        | ID LBRACKET error
  158        | error RBRACKET

  159 immutable: LPAREN expression RPAREN
  160          | call
  161          | constant
  162          | LPAREN error

  163 call: ID LPAREN args RPAREN
  164     | ID LPAREN error

  165 args: arg-list
  166     | %empty

  167 arg-list: arg-list COMMA expression
  168         | expression
  169         | error COMMA expression
  170         | arg-list COMMA error

  171 constant: NUMCONST
  172         | CHARCONST
  173         | STRINGCONST
  174         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
error (256) 6 8 10 11 14 15 18 19 20 23 24 32 33 34 35 36 41 42 44
    47 48 51 61 66 69 70 72 74 76 78 80 81 85 88 95 96 97 101 102 110
    111 112 115 116 117 120 123 124 125 134 135 136 141 142 143 149
    157 158 162 164 169 170
ERROR (258)
ID (259) 21 22 23 30 31 33 34 35 36 49 50 155 156 157 163 164
NUMCONST (260) 22 171
STRINGCONST (261) 173
CHARCONST (262) 172
BOOLCONST (263) 174
ADDASS (264) 104
SUBASS (265) 105
MULASS (266) 106
DIVASS (267) 107
INC (268) 98 101
DEC (269) 99 102
LESSEQ (270) 126
GRTEQ (271) 129
EQ (272) 130
NOTEQ (273) 131
STATIC (274) 25
INT (275) 27
BOOL (276) 28
CHAR (277) 29
IF (278) 65 66 67 68 69 70
ELSE (279) 65 66 68 70
WHILE (280) 71 72 73 74
FOREACH (281) 75 76 77 78
IN (282) 75 77
RETURN (283) 90 91
BREAK (284) 92
SEMICOLON (285) 7 8 9 11 39 41 42 87 88 89 90 91 92
LPAREN (286) 30 31 33 34 35 36 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 159 162 163 164
RPAREN (287) 30 31 34 36 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    159 163
LBRACKET (288) 22 23 50 156 157
RBRACKET (289) 22 24 50 156 158
OR (290) 108 110 111 112
AND (291) 113 115 116 117
NOT (292) 118 120
ASSIGN (293) 93 103
PLUS (294) 137
MINUS (295) 138 150
MULTIPLY (296) 144 151
DIVIDE (297) 145
MODULUS (298) 146
QUESTION (299) 152
LTHAN (300) 127
GTHAN (301) 128
LBRACE (302) 79 80 81
RBRACE (303) 79 80 81
COMMA (304) 12 14 15 45 47 48 167 169 170
COLON (305) 17 18 19


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
declaration-list (53)
    on left: 2 3, on right: 1 2
declaration (54)
    on left: 4 5 6, on right: 2 3
var-declaration (55)
    on left: 7 8, on right: 4
scoped-var-declaration (56)
    on left: 9 10 11, on right: 82
var-decl-list (57)
    on left: 12 13 14 15, on right: 7 9 12 15
var-decl-initialize (58)
    on left: 16 17 18 19 20, on right: 12 13 14
var-decl-id (59)
    on left: 21 22 23 24, on right: 16 17 19
scoped-type-specifier (60)
    on left: 25 26, on right: 9
type-specifier (61)
    on left: 27 28 29, on right: 7 10 25 26 30 32 33 34 43 44
fun-declaration (62)
    on left: 30 31 32 33 34 35 36, on right: 5
params (63)
    on left: 37 38, on right: 30 31 34 36
param-list (64)
    on left: 39 40 41 42, on right: 37 39 42
param-type-list (65)
    on left: 43 44, on right: 39 40 41
param-id-list (66)
    on left: 45 46 47 48, on right: 43 45 48
param-id (67)
    on left: 49 50 51, on right: 45 46 47
statement (68)
    on left: 52 53, on right: 30 31 67 69 84
matched (69)
    on left: 54 55 56 57 58 59 60 61, on right: 52 65 66 68 70 71 72
    75 76
unmatched (70)
    on left: 62 63 64, on right: 53 68 70 73 74 77 78
matched-selection-stmt (71)
    on left: 65 66, on right: 56
unmatched-selection-stmt (72)
    on left: 67 68 69 70, on right: 62
matched-while-stmt (73)
    on left: 71 72, on right: 57
unmatched-while-stmt (74)
    on left: 73 74, on right: 63
matched-foreach-stmt (75)
    on left: 75 76, on right: 58
unmatched-foreach-stmt (76)
    on left: 77 78, on right: 64
compound-stmt (77)
    on left: 79 80 81, on right: 55
local-declarations (78)
    on left: 82 83, on right: 79 81 82
statement-list (79)
    on left: 84 85 86, on right: 79 80 84 85
expression-stmt (80)
    on left: 87 88 89, on right: 54
return-stmt (81)
    on left: 90 91, on right: 59
break-stmt (82)
    on left: 92, on right: 60
expression (83)
    on left: 93 94 95 96 97 98 99 100 101 102, on right: 87 91 93 94
    95 156 159 167 168 169
assignop (84)
    on left: 103 104 105 106 107, on right: 94 95 96 97
simple-expression (85)
    on left: 108 109 110 111 112, on right: 17 18 65 67 68 71 73 75
    77 100 108 111
and-expression (86)
    on left: 113 114 115 116 117, on right: 108 109 110 113 116
unary-rel-expression (87)
    on left: 118 119 120, on right: 113 114 115 118
rel-expression (88)
    on left: 121 122 123 124 125, on right: 119
relop (89)
    on left: 126 127 128 129 130 131, on right: 121 123 124 125
sum-expression (90)
    on left: 132 133 134 135 136, on right: 121 122 123 124 132 135
sumop (91)
    on left: 137 138, on right: 132 134 135 136
term (92)
    on left: 139 140 141 142 143, on right: 132 133 134 139 142
mulop (93)
    on left: 144 145 146, on right: 139 141 142 143
unary-expression (94)
    on left: 147 148 149, on right: 139 140 141 147
unaryop (95)
    on left: 150 151 152, on right: 147 149
factor (96)
    on left: 153 154, on right: 148
mutable (97)
    on left: 155 156 157 158, on right: 75 77 93 94 96 98 99 154
immutable (98)
    on left: 159 160 161 162, on right: 153
call (99)
    on left: 163 164, on right: 160
args (100)
    on left: 165 166, on right: 163
arg-list (101)
    on left: 167 168 169 170, on right: 165 167 170
constant (102)
    on left: 171 172 173 174, on right: 161


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    program           go to state 6
    declaration-list  go to state 7
    declaration       go to state 8
    var-declaration   go to state 9
    type-specifier    go to state 10
    fun-declaration   go to state 11


State 1

    6 declaration: error .
    8 var-declaration: error . SEMICOLON

    SEMICOLON  shift, and go to state 12

    $default  reduce using rule 6 (declaration)


State 2

   31 fun-declaration: ID . LPAREN params RPAREN statement
   35                | ID . LPAREN error
   36                | ID . LPAREN params RPAREN error

    LPAREN  shift, and go to state 13


State 3

   27 type-specifier: INT .

    $default  reduce using rule 27 (type-specifier)


State 4

   28 type-specifier: BOOL .

    $default  reduce using rule 28 (type-specifier)


State 5

   29 type-specifier: CHAR .

    $default  reduce using rule 29 (type-specifier)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 14


State 7

    1 program: declaration-list .
    2 declaration-list: declaration-list . declaration

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    declaration      go to state 15
    var-declaration  go to state 9
    type-specifier   go to state 10
    fun-declaration  go to state 11


State 8

    3 declaration-list: declaration .

    $default  reduce using rule 3 (declaration-list)


State 9

    4 declaration: var-declaration .

    $default  reduce using rule 4 (declaration)


State 10

    7 var-declaration: type-specifier . var-decl-list SEMICOLON
   30 fun-declaration: type-specifier . ID LPAREN params RPAREN statement
   32                | type-specifier . error
   33                | type-specifier . ID LPAREN error
   34                | type-specifier . ID LPAREN params RPAREN error

    error  shift, and go to state 16
    ID     shift, and go to state 17

    var-decl-list        go to state 18
    var-decl-initialize  go to state 19
    var-decl-id          go to state 20


State 11

    5 declaration: fun-declaration .

    $default  reduce using rule 5 (declaration)


State 12

    8 var-declaration: error SEMICOLON .

    $default  reduce using rule 8 (var-declaration)


State 13

   31 fun-declaration: ID LPAREN . params RPAREN statement
   35                | ID LPAREN . error
   36                | ID LPAREN . params RPAREN error

    error  shift, and go to state 21
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RPAREN  reduce using rule 38 (params)

    type-specifier   go to state 22
    params           go to state 23
    param-list       go to state 24
    param-type-list  go to state 25


State 14

    0 $accept: program $end .

    $default  accept


State 15

    2 declaration-list: declaration-list declaration .

    $default  reduce using rule 2 (declaration-list)


State 16

   14 var-decl-list: error . COMMA var-decl-initialize
   18 var-decl-initialize: error . COLON simple-expression
   20                    | error .
   24 var-decl-id: error . RBRACKET
   32 fun-declaration: type-specifier error .

    RBRACKET  shift, and go to state 26
    COMMA     shift, and go to state 27
    COLON     shift, and go to state 28

    SEMICOLON  reduce using rule 20 (var-decl-initialize)
    COMMA      [reduce using rule 20 (var-decl-initialize)]
    $default   reduce using rule 32 (fun-declaration)


State 17

   21 var-decl-id: ID .
   22            | ID . LBRACKET NUMCONST RBRACKET
   23            | ID . LBRACKET error
   30 fun-declaration: type-specifier ID . LPAREN params RPAREN statement
   33                | type-specifier ID . LPAREN error
   34                | type-specifier ID . LPAREN params RPAREN error

    LPAREN    shift, and go to state 29
    LBRACKET  shift, and go to state 30

    $default  reduce using rule 21 (var-decl-id)


State 18

    7 var-declaration: type-specifier var-decl-list . SEMICOLON
   12 var-decl-list: var-decl-list . COMMA var-decl-initialize
   15              | var-decl-list . COMMA error

    SEMICOLON  shift, and go to state 31
    COMMA      shift, and go to state 32


State 19

   13 var-decl-list: var-decl-initialize .

    $default  reduce using rule 13 (var-decl-list)


State 20

   16 var-decl-initialize: var-decl-id .
   17                    | var-decl-id . COLON simple-expression
   19                    | var-decl-id . COLON error

    COLON  shift, and go to state 33

    $default  reduce using rule 16 (var-decl-initialize)


State 21

   35 fun-declaration: ID LPAREN error .
   41 param-list: error . SEMICOLON param-type-list

    SEMICOLON  shift, and go to state 34

    $default  reduce using rule 35 (fun-declaration)


State 22

   43 param-type-list: type-specifier . param-id-list
   44                | type-specifier . error

    error  shift, and go to state 35
    ID     shift, and go to state 36

    param-id-list  go to state 37
    param-id       go to state 38


State 23

   31 fun-declaration: ID LPAREN params . RPAREN statement
   36                | ID LPAREN params . RPAREN error

    RPAREN  shift, and go to state 39


State 24

   37 params: param-list .
   39 param-list: param-list . SEMICOLON param-type-list
   42           | param-list . SEMICOLON error

    SEMICOLON  shift, and go to state 40

    $default  reduce using rule 37 (params)


State 25

   40 param-list: param-type-list .

    $default  reduce using rule 40 (param-list)


State 26

   24 var-decl-id: error RBRACKET .

    $default  reduce using rule 24 (var-decl-id)


State 27

   14 var-decl-list: error COMMA . var-decl-initialize

    error  shift, and go to state 41
    ID     shift, and go to state 42

    var-decl-initialize  go to state 43
    var-decl-id          go to state 20


State 28

   18 var-decl-initialize: error COLON . simple-expression

    error        shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    CHARCONST    shift, and go to state 48
    BOOLCONST    shift, and go to state 49
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 51
    MINUS        shift, and go to state 52
    MULTIPLY     shift, and go to state 53
    QUESTION     shift, and go to state 54

    simple-expression     go to state 55
    and-expression        go to state 56
    unary-rel-expression  go to state 57
    rel-expression        go to state 58
    sum-expression        go to state 59
    term                  go to state 60
    unary-expression      go to state 61
    unaryop               go to state 62
    factor                go to state 63
    mutable               go to state 64
    immutable             go to state 65
    call                  go to state 66
    constant              go to state 67


State 29

   30 fun-declaration: type-specifier ID LPAREN . params RPAREN statement
   33                | type-specifier ID LPAREN . error
   34                | type-specifier ID LPAREN . params RPAREN error

    error  shift, and go to state 68
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RPAREN  reduce using rule 38 (params)

    type-specifier   go to state 22
    params           go to state 69
    param-list       go to state 24
    param-type-list  go to state 25


State 30

   22 var-decl-id: ID LBRACKET . NUMCONST RBRACKET
   23            | ID LBRACKET . error

    error     shift, and go to state 70
    NUMCONST  shift, and go to state 71


State 31

    7 var-declaration: type-specifier var-decl-list SEMICOLON .

    $default  reduce using rule 7 (var-declaration)


State 32

   12 var-decl-list: var-decl-list COMMA . var-decl-initialize
   15              | var-decl-list COMMA . error

    error  shift, and go to state 72
    ID     shift, and go to state 42

    var-decl-initialize  go to state 73
    var-decl-id          go to state 20


State 33

   17 var-decl-initialize: var-decl-id COLON . simple-expression
   19                    | var-decl-id COLON . error

    error        shift, and go to state 74
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    CHARCONST    shift, and go to state 48
    BOOLCONST    shift, and go to state 49
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 51
    MINUS        shift, and go to state 52
    MULTIPLY     shift, and go to state 53
    QUESTION     shift, and go to state 54

    simple-expression     go to state 75
    and-expression        go to state 56
    unary-rel-expression  go to state 57
    rel-expression        go to state 58
    sum-expression        go to state 59
    term                  go to state 60
    unary-expression      go to state 61
    unaryop               go to state 62
    factor                go to state 63
    mutable               go to state 64
    immutable             go to state 65
    call                  go to state 66
    constant              go to state 67


State 34

   41 param-list: error SEMICOLON . param-type-list

    INT   shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    type-specifier   go to state 22
    param-type-list  go to state 76


State 35

   44 param-type-list: type-specifier error .
   47 param-id-list: error . COMMA param-id
   51 param-id: error .

    COMMA  shift, and go to state 77

    SEMICOLON  reduce using rule 44 (param-type-list)
    SEMICOLON  [reduce using rule 51 (param-id)]
    RPAREN     reduce using rule 44 (param-type-list)
    RPAREN     [reduce using rule 51 (param-id)]
    COMMA      [reduce using rule 51 (param-id)]
    $default   reduce using rule 44 (param-type-list)


State 36

   49 param-id: ID .
   50         | ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 78

    $default  reduce using rule 49 (param-id)


State 37

   43 param-type-list: type-specifier param-id-list .
   45 param-id-list: param-id-list . COMMA param-id
   48              | param-id-list . COMMA error

    COMMA  shift, and go to state 79

    $default  reduce using rule 43 (param-type-list)


State 38

   46 param-id-list: param-id .

    $default  reduce using rule 46 (param-id-list)


State 39

   31 fun-declaration: ID LPAREN params RPAREN . statement
   36                | ID LPAREN params RPAREN . error

    error        shift, and go to state 80
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    CHARCONST    shift, and go to state 48
    BOOLCONST    shift, and go to state 49
    IF           shift, and go to state 81
    WHILE        shift, and go to state 82
    FOREACH      shift, and go to state 83
    RETURN       shift, and go to state 84
    BREAK        shift, and go to state 85
    SEMICOLON    shift, and go to state 86
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 51
    MINUS        shift, and go to state 52
    MULTIPLY     shift, and go to state 53
    QUESTION     shift, and go to state 54
    LBRACE       shift, and go to state 87

    statement                 go to state 88
    matched                   go to state 89
    unmatched                 go to state 90
    matched-selection-stmt    go to state 91
    unmatched-selection-stmt  go to state 92
    matched-while-stmt        go to state 93
    unmatched-while-stmt      go to state 94
    matched-foreach-stmt      go to state 95
    unmatched-foreach-stmt    go to state 96
    compound-stmt             go to state 97
    expression-stmt           go to state 98
    return-stmt               go to state 99
    break-stmt                go to state 100
    expression                go to state 101
    simple-expression         go to state 102
    and-expression            go to state 56
    unary-rel-expression      go to state 57
    rel-expression            go to state 58
    sum-expression            go to state 59
    term                      go to state 60
    unary-expression          go to state 61
    unaryop                   go to state 62
    factor                    go to state 63
    mutable                   go to state 103
    immutable                 go to state 65
    call                      go to state 66
    constant                  go to state 67


State 40

   39 param-list: param-list SEMICOLON . param-type-list
   42           | param-list SEMICOLON . error

    error  shift, and go to state 104
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    type-specifier   go to state 22
    param-type-list  go to state 105


State 41

   18 var-decl-initialize: error . COLON simple-expression
   20                    | error .
   24 var-decl-id: error . RBRACKET

    RBRACKET  shift, and go to state 26
    COLON     shift, and go to state 28

    $default  reduce using rule 20 (var-decl-initialize)


State 42

   21 var-decl-id: ID .
   22            | ID . LBRACKET NUMCONST RBRACKET
   23            | ID . LBRACKET error

    LBRACKET  shift, and go to state 30

    $default  reduce using rule 21 (var-decl-id)


State 43

   14 var-decl-list: error COMMA var-decl-initialize .

    $default  reduce using rule 14 (var-decl-list)


State 44

  110 simple-expression: error . OR and-expression
  112                  | error . OR error
  115 and-expression: error . AND unary-rel-expression
  117               | error . AND error
  123 rel-expression: error . relop sum-expression
  125               | error . relop error
  134 sum-expression: error . sumop term
  136               | error . sumop error
  141 term: error . mulop unary-expression
  143     | error . mulop error
  158 mutable: error . RBRACKET

    LESSEQ    shift, and go to state 106
    GRTEQ     shift, and go to state 107
    EQ        shift, and go to state 108
    NOTEQ     shift, and go to state 109
    RBRACKET  shift, and go to state 110
    OR        shift, and go to state 111
    AND       shift, and go to state 112
    PLUS      shift, and go to state 113
    MINUS     shift, and go to state 114
    MULTIPLY  shift, and go to state 115
    DIVIDE    shift, and go to state 116
    MODULUS   shift, and go to state 117
    LTHAN     shift, and go to state 118
    GTHAN     shift, and go to state 119

    relop  go to state 120
    sumop  go to state 121
    mulop  go to state 122


State 45

  155 mutable: ID .
  156        | ID . LBRACKET expression RBRACKET
  157        | ID . LBRACKET error
  163 call: ID . LPAREN args RPAREN
  164     | ID . LPAREN error

    LPAREN    shift, and go to state 123
    LBRACKET  shift, and go to state 124

    $default  reduce using rule 155 (mutable)


State 46

  171 constant: NUMCONST .

    $default  reduce using rule 171 (constant)


State 47

  173 constant: STRINGCONST .

    $default  reduce using rule 173 (constant)


State 48

  172 constant: CHARCONST .

    $default  reduce using rule 172 (constant)


State 49

  174 constant: BOOLCONST .

    $default  reduce using rule 174 (constant)


State 50

  159 immutable: LPAREN . expression RPAREN
  162          | LPAREN . error

    error        shift, and go to state 125
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    CHARCONST    shift, and go to state 48
    BOOLCONST    shift, and go to state 49
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 51
    MINUS        shift, and go to state 52
    MULTIPLY     shift, and go to state 53
    QUESTION     shift, and go to state 54

    expression            go to state 126
    simple-expression     go to state 102
    and-expression        go to state 56
    unary-rel-expression  go to state 57
    rel-expression        go to state 58
    sum-expression        go to state 59
    term                  go to state 60
    unary-expression      go to state 61
    unaryop               go to state 62
    factor                go to state 63
    mutable               go to state 103
    immutable             go to state 65
    call                  go to state 66
    constant              go to state 67


State 51

  118 unary-rel-expression: NOT . unary-rel-expression
  120                     | NOT . error

    error        shift, and go to state 127
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    CHARCONST    shift, and go to state 48
    BOOLCONST    shift, and go to state 49
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 51
    MINUS        shift, and go to state 52
    MULTIPLY     shift, and go to state 53
    QUESTION     shift, and go to state 54

    unary-rel-expression  go to state 128
    rel-expression        go to state 58
    sum-expression        go to state 59
    term                  go to state 60
    unary-expression      go to state 61
    unaryop               go to state 62
    factor                go to state 63
    mutable               go to state 64
    immutable             go to state 65
    call                  go to state 66
    constant              go to state 67


State 52

  150 unaryop: MINUS .

    $default  reduce using rule 150 (unaryop)


State 53

  151 unaryop: MULTIPLY .

    $default  reduce using rule 151 (unaryop)


State 54

  152 unaryop: QUESTION .

    $default  reduce using rule 152 (unaryop)


State 55

   18 var-decl-initialize: error COLON simple-expression .
  108 simple-expression: simple-expression . OR and-expression
  111                  | simple-expression . OR error

    OR  shift, and go to state 129

    $default  reduce using rule 18 (var-decl-initialize)


State 56

  109 simple-expression: and-expression .
  113 and-expression: and-expression . AND unary-rel-expression
  116               | and-expression . AND error

    AND  shift, and go to state 130

    $default  reduce using rule 109 (simple-expression)


State 57

  114 and-expression: unary-rel-expression .

    $default  reduce using rule 114 (and-expression)


State 58

  119 unary-rel-expression: rel-expression .

    $default  reduce using rule 119 (unary-rel-expression)


State 59

  121 rel-expression: sum-expression . relop sum-expression
  122               | sum-expression .
  124               | sum-expression . relop error
  132 sum-expression: sum-expression . sumop term
  135               | sum-expression . sumop error

    LESSEQ  shift, and go to state 106
    GRTEQ   shift, and go to state 107
    EQ      shift, and go to state 108
    NOTEQ   shift, and go to state 109
    PLUS    shift, and go to state 113
    MINUS   shift, and go to state 114
    LTHAN   shift, and go to state 118
    GTHAN   shift, and go to state 119

    $default  reduce using rule 122 (rel-expression)

    relop  go to state 131
    sumop  go to state 132


State 60

  133 sum-expression: term .
  139 term: term . mulop unary-expression
  142     | term . mulop error

    MULTIPLY  shift, and go to state 115
    DIVIDE    shift, and go to state 116
    MODULUS   shift, and go to state 117

    $default  reduce using rule 133 (sum-expression)

    mulop  go to state 133


State 61

  140 term: unary-expression .

    $default  reduce using rule 140 (term)


State 62

  147 unary-expression: unaryop . unary-expression
  149                 | unaryop . error

    error        shift, and go to state 134
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    STRINGCONST  shift, and go to state 47
    CHARCONST    shift, and go to state 48
    BOOLCONST    shift, and go to state 49
    LPAREN       shift, and go to state 50
    MINUS        shift, and go to state 52
    MULTIPLY     shift, and go to state 53
    QUESTION     shift, and go to state 54

    unary-expression  go to state 135
    unaryop           go to state 62
    factor            go to state 63
    mutable           go to state 64
    immutable         go to state 65
    call              go to state 66
    constant          go to state 67


State 63

  148 unary-expression: factor .

    $default  reduce using rule 148 (unary-expression)


State 64

  154 factor: mutable .

    $default  reduce using rule 154 (factor)


State 65

  153 factor: immutable .

    $default  reduce using rule 153 (factor)


State 66

  160 immutable: call .

    $default  reduce using rule 160 (immutable)


State 67

  161 immutable: constant .

    $default  reduce using rule 161 (immutable)


State 68

   33 fun-declaration: type-specifier ID LPAREN error .
   41 param-list: error . SEMICOLON param-type-list

    SEMICOLON  shift, and go to state 34

    $default  reduce using rule 33 (fun-declaration)


State 69

   30 fun-declaration: type-specifier ID LPAREN params . RPAREN statement
   34                | type-specifier ID LPAREN params . RPAREN error

    RPAREN  shift, and go to state 136


State 70

   23 var-decl-id: ID LBRACKET error .

    $default  reduce using rule 23 (var-decl-id)


State 71

   22 var-decl-id: ID LBRACKET NUMCONST . RBRACKET

    RBRACKET  shift, and go to state 137


State 72

   15 var-decl-list: var-decl-list COMMA error .
   18 var-decl-initialize: error . COLON simple-expression
   20                    | error .
   24 var-decl-id: error . RBRACKET

    RBRACKET  shift, and go to state 26
    COLON     shift, and go to state 28

    SEMICOLON  reduce using rule 15 (var-decl-list)
    SEMICOLON  [reduce using rule 20 (var-decl-initialize)]
    COMMA      reduce using rule 15 (var-decl-list)
    COMMA      [reduce using rule 20 (var-decl-initialize)]
    $default   reduce using rule 15 (var-decl-list)


State 73

   12 var-decl-list: var-decl-list COMMA var-decl-initialize .

    $default  reduce using rule 12 (var-decl-list)


State 74

   19 var-decl-initialize: var-decl-id COLON error .
  110 simple-expression: error . OR and-expression
  112                  | error . OR error
  115 and-expression: error . AND unary-rel-expression
  117               | error . AND error
  123 rel-expression: error . relop sum-expression
  125               | error . relop error
  134 sum-expression: error . sumop term
  136               | error . sumop error
  141 term: error . mulop unary-expression
  143     | error . mulop error
  158 mutable: error . RBRACKET
